--- a/karim.libraries.yml
+++ b/karim.libraries.yml
@@ -1,10 +1,12 @@
 global-styling:
   css:
     theme:
+      includes/bootstrap/css/bootstrap.min.css: {}
       css/custom.css: {}
 
 global-js:
   js:
+      includes/bootstrap/js/bootstrap.min.js: {}
     js/app.bundle.js: {}
 dependencies:
   - core/jquery
