--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   },
   "homepage": "https://github.com/karim88/Karim#readme",
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "bootstrap": "^3.3.7",
     "css-loader": "^0.28.7",
     "es2015": "^0.0.0",
     "extract-text-webpack-plugin": "^3.0.1",
